fix lỗi font gửi mail phiếu giảm giá cá nhân