@@ -33,6 +33,7 @@ import org.springframework.web.server.ResponseStatusException;
 
 
 import java.math.BigDecimal;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.time.*;
@@ -315,8 +316,10 @@ public class PhieuGiamGiaServiceImpl implements PhieuGiamGiaService {
                     .format(formatter);
 
             // Tải mẫu HTML từ tệp tài nguyên
-            String htmlContent = new String(Files.readAllBytes(
-                    Paths.get(getClass().getResource("/templates/email/voucher.html").toURI())));
+            String htmlContent = Files.readString(
+                    Paths.get(getClass().getResource("/templates/email/voucher.html").toURI()),
+                    StandardCharsets.UTF_8);
+
 
             // Định dạng giá trị giảm giá dựa trên loại phiếu
             String giaTriGiam = phieuGiamGia.getLoaiPhieuGiamGia() == 1
@@ -512,8 +515,10 @@ public class PhieuGiamGiaServiceImpl implements PhieuGiamGiaService {
                     .format(formatter);
 
             // Tải mẫu HTML từ tệp tài nguyên
-            String htmlContent = new String(Files.readAllBytes(
-                    Paths.get(getClass().getResource("/templates/email/voucher.html").toURI())));
+            String htmlContent = Files.readString(
+                    Paths.get(getClass().getResource("/templates/email/voucher.html").toURI()),
+                    StandardCharsets.UTF_8);
+
 
             // Định dạng giá trị giảm giá dựa trên loại phiếu
             String giaTriGiam = phieuGiamGia.getLoaiPhieuGiamGia() == 1
